# log-MPPI_ros

./: LICENSE  README.md
jackal_ros/jackal/jackal_control/config/: control.yaml
jackal_ros/jackal/jackal_control/launch/: control.launch  (+1 more)
jackal_ros/jackal_desktop/jackal_desktop/: CHANGELOG.rst  package.xml
jackal_ros/jackal_desktop/jackal_viz/: CHANGELOG.rst  package.xml
jackal_ros/jackal_robot/: rosinstall
jackal_ros/jackal_robot/jackal_base/: CHANGELOG.rst  CMakeLists.txt  package.xml
jackal_ros/jackal_robot/jackal_bringup/: CHANGELOG.rst  package.xml
jackal_ros/jackal_robot/jackal_robot/: CHANGELOG.rst  package.xml
jackal_ros/jackal_simulator/jackal_simulator/: CHANGELOG.rst  package.xml
mission_control/: CMakeLists.txt  README.md  package.xml
mission_control/launch/: forest0_mission.launch  forest1_mission.launch
mission_control/missions/: forest0.txt  forest1.txt
mission_control/src/: mission_control.py  mission_control_node.py  mission_file_parser.py  write_mission.py  write_mission_node.py
mppi_control/: CMakeLists.txt  package.xml  setup.py
mppi_control/launch/: control_stage.launch  costmap_launcher.launch  mppi_launcher.launch
mppi_control/resources/costmap_params/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
mppi_control/resources/mppi_params/: mppi_params_sim.yaml
mppi_control/results/: README.md
mppi_control/scripts/mppi_control/: jackal.py  mppi.py  utils.py
mppi_control/src/: mppi_control_node.py  tf_transform.py
velodyne_simulator/velodyne_description/urdf/: VLP-16.urdf.xacro
(+44 files in other folders)
